# DependaBotTest

py/PlatformNine/DependaBotTest/sample_django_app/: Dockerfile  Dockerfile.test  README.md  README_TESTING.md  conftest.py  docker-compose.test.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  start.sh  test_session.py
py/PlatformNine/DependaBotTest/sample_django_app/core/: settings.py  urls.py
py/PlatformNine/DependaBotTest/sample_django_app/templates/users/: lookup_by_email.html
py/PlatformNine/DependaBotTest/sample_django_app/users/: middleware.py  models.py  serializers.py  views.py
py/PlatformNine/DependaBotTest/sample_django_app/users/management/commands/: debug_users.py  reset_admin.py
py/dependabottest/: pyproject.toml
py/sample_django_app/: Dockerfile  README.md  docker-compose.yml
py/sample_django_app/users/: pagination.py  utils.py  views.py
py/sample_django_app/users/migrations/: 0001_initial.py
